@@ -314,7 +314,35 @@ which now has the ``/emilie/dev`` as a base only::
    
 Modifying the ACL
 ^^^^^^^^^^^^^^^^^
-   
+
+To modify the ACLs, you have to set the whole list of allowed users.
+Emilie may allow sophie to upload to her dev index:
+
+   $ devpi index /emilie/dev acl_upload=emilie,sophie
+
+   $ devpi index /emilie/dev
+   http://localhost:3141/emilie/dev:
+     type=stage
+     bases=emilie/prod
+     volatile=True
+     uploadtrigger_jenkins=None
+     acl_upload=emilie,sophie
+     pypi_whitelist=
+
+It is also possible to allow anonymous uploads if you have a controlled environment.
+
+   $ devpi index /emilie/dev acl_upload=:ANONYMOUS:
+
+   $ devpi index /emilie/dev
+   http://localhost:3141/emilie/dev:
+     type=stage
+     bases=emilie/prod
+     volatile=True
+     uploadtrigger_jenkins=None
+     acl_upload=:ANONYMOUS:
+     pypi_whitelist=
+
+
 Switching Between Indices
 -------------------------
 
