@@ -14,6 +14,9 @@
 - fix issue126: handle deletion of pypi project cache entries correctly 
   (i.e. ones that are triggered by "refresh" on simple page).
 
+- Add special handling of ":ANONYMOUS:" user in acl_upload to allow anonymous
+  submit.
+
 
 2.0.1
 ----------------
